# TMB-Cityscape

./: CityScape_Logic.docx  INITIAL_TMB_SP1.docx  README.md  Stranické_zasedání_19._3..docx
CodeSnippets/: test.py
server/: BasicServerVisualizer.py  BasicServerVisualizer_withRotation.py  PyServer_GridVisualization.py  README.md  server
server/helper_files/: ConfigParser.py  config.json
tracker/: .gitignore  CMakeLists.txt
tracker/lib/: json.hpp
tracker/src/common/: Application.cpp  Application.hpp  ArUcoDriver.cpp  ArUcoDriver.hpp  ArUcoMarker.cpp  ArUcoMarker.hpp  CameraCapture.cpp  CameraCapture.hpp  Capture.cpp  Capture.hpp  Component.cpp  Component.hpp  Driver.hpp  Marker.cpp  Marker.hpp  Object.hpp  Sender.cpp  Sender.hpp  Surface.cpp  Surface.hpp  TUIOSender.cpp  TUIOSender.hpp  TestDriver.cpp  TestDriver.hpp  Utils.cpp  Utils.hpp  WindowSender.cpp  WindowSender.hpp
tracker/src/cropper/: main.cpp
tracker/src/generator/: main.cpp
tracker/src/tracker/: main.cpp
